--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body ng-app='app'>
   <!-- <h1>hello</h1> -->
 
-  <header ng-include="'/views/partials/header.html'"></header>
+  <header ng-include="'views/partials/header.html'"></header>
 <!-- <md-checkbox>Kickin it</md-checkbox> -->
   <main ng-view></main>
 </body>
