--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <script type="text/javascript" src="scripts/controllers/portfolio.js"></script>
   <link rel="stylesheet" href="styles/style.css">
 
-  <title>Zack Stout: get it son</title>
+  <title>Zack Stout: Personal Page</title>
 </head>
 <body ng-app='app'>
   <!-- <h1>hello</h1> -->
