--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <script src="vendors/angular-aria.min.js" charset="utf-8"></script>
   <script src="vendors/angular-messages.min.js" charset="utf-8"></script>
   <link rel="stylesheet" href="vendors/angular-material.min.css">
+  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
+
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
