cleaning up, almost ready to push up segmented blog

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="vendors/angular-aria.min.js" charset="utf-8"></script>
   <script src="vendors/angular-messages.min.js" charset="utf-8"></script>
   <link rel="stylesheet" href="vendors/angular-material.min.css">
-  
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
 
 
@@ -22,6 +22,12 @@
   <script type="text/javascript" src="scripts/controllers/about.js"></script>
   <script type="text/javascript" src="scripts/controllers/blog.js"></script>
   <script type="text/javascript" src="scripts/controllers/portfolio.js"></script>
+
+  <script type="text/javascript" src="scripts/controllers/code.js"></script>
+  <script type="text/javascript" src="scripts/controllers/math.js"></script>
+  <script type="text/javascript" src="scripts/controllers/other.js"></script>
+
+  
   <link rel="stylesheet" href="styles/style.css">
 
   <title>Zack Stout: Personal Page</title>
