--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
 
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+  <script src="vendors/ui-bootstrap-tpls-2.5.0.min.js" charset="utf-8"></script>
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -22,12 +25,13 @@
   <script type="text/javascript" src="scripts/controllers/about.js"></script>
   <script type="text/javascript" src="scripts/controllers/blog.js"></script>
   <script type="text/javascript" src="scripts/controllers/portfolio.js"></script>
+  <script src="scripts/controllers/newportfolio.js" charset="utf-8"></script>
 
   <script type="text/javascript" src="scripts/controllers/code.js"></script>
   <script type="text/javascript" src="scripts/controllers/math.js"></script>
   <script type="text/javascript" src="scripts/controllers/other.js"></script>
 
-  
+
   <link rel="stylesheet" href="styles/style.css">
 
   <title>Zack Stout: Personal Page</title>
